objects/QuotationStatus_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ABB_Sales_Stage__c</fullName>
        <label>ABB Sales Stage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBP__c</fullName>
        <label>CBP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Category__c</fullName>
        <label>Quotation Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Pursuit_Progress__c</fullName>
        <label>Sales Pursuit Progress</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>QuotationStatus Mapping</label>
</CustomObject>